alcune correzioni grammaticali/aggiunte di frasi

--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -112,7 +112,7 @@ Principalmente esistono due meccanismi di consenso ritenuti validi: \textit{Proo
     Se viene emesso un blocco fraudolento o se un validatore eletto va offline, parte dei token bloccati di quel validatore sono distrutti e persi per sempre.
     \newpage
     Vi è quindi un forte incentivo economico a non emettere blocchi non validi e a rimanere online. Inoltre, per appropriarsi della rete è necessaria
-    una disponibilità economica enorme per creare un numero significativo di validatori (considerando anche che non basta avere metà dei validatori candidati, è anche necessario che più della metà dei validatori eletti siano tra quelli), e anche se un'entità provasse un attacco del genere i soldi spesi per l'acquisto dei token sarebbero persi per sempre poichè se la rete collassasse il valore dei suoi token nativi collasserebbe con lei.
+    una disponibilità economica enorme per creare un numero significativo di validatori (considerando anche che non basta avere metà dei validatori candidati, è anche necessario che più della metà dei validatori eletti siano tra quelli), e anche se un'entità provasse un attacco del genere i soldi spesi per l'acquisto dei token sarebbero persi per sempre poichè se la rete collassasse il valore dei suoi token nativi collasserebbe con lei.\\
 
 \end{itemize}
 
@@ -136,13 +136,15 @@ di estrema perdita di valore dei token e conseguentemente di fiducia nella rete 
 
 \newpage
 
-\subsection*{Tabella comparativa delle Blockchain}
-La seguente tabella è stata sviluppata per confrontare alcune delle blockchain più famose e ritenute valide secondo le metriche precedentemente definite.
-Esistendo centinaia di blockchain diverse questa tabella non è chiaramente comprensiva di tutte: è stato necessario adottare dei criteri di esclusione pre-valutazione per confrontare
+\subsection*{Tabelle comparativa delle Blockchain}
+Le seguenti tabelle sono state sviluppate per confrontare alcune delle blockchain più famose e ritenute valide secondo le metriche precedentemente definite.
+Anche se inizialmente il confronto voleva essere fatto tramite una formula (che forniti i dati rispetto alle metriche considerate restituisse un valore per quantificare l'adeguatezza di ogni rete per
+questo progetto) si è poi deciso di integrare i dati con una descrizione discorsiva vista l'alta presenza di particolari relativi ad una sola chain e non utilizzabili quindi come metriche in quanto non condivisi da altre reti, rendendo l'utilizzo di una formula impossibile.
+Esistendo centinaia di blockchain diverse queste tabelle non sono chiaramente comprensive di tutte: è stato necessario adottare dei criteri di esclusione pre-valutazione per confrontare
 solo le blockchain più adatte.
 Un primo criterio di esclusione riguarda ovviamente la possibilità di pubblicazione di contratti digitali: mentre non è escluso che esistano altre blockchain competitive
-per le normali transazioni, l'assenza della capacità di eseguire contratti digitali ne ha decretato l'esclusione dalla tabella comparativa.
-Un altro criterio di esclusione più opinabile, invece, riguarda il tempo di vita della chain stessa: sono state escluse blockchain con rilascio risalente a meno di un anno fa,
+per le normali transazioni, l'assenza della capacità di eseguire contratti digitali ne ha decretato l'esclusione dalle tabelle comparative.
+Un altro criterio di esclusione più opinabile, invece, riguarda il tempo di vita della chain stessa: sono state escluse blockchain con data di rilascio risalente a meno di un anno fa,
 perchè ritenuto che almeno un anno di vita senza problemi di stabilità nelle reti sia necessario per garantire almeno una parte della sicurezza delle stesse, soprattutto
 considerando che andremo ad operare con fondi di utenti che andrebbero risarciti in caso di problemi.
 
@@ -179,7 +181,7 @@ Cardano                                     & L1                                
 Polygon                                     & Sidechain                                        & POS                               & \cellcolor[HTML]{FF8F8C}100               & \cellcolor[HTML]{ADE694}$\sim$7.5\% of Supply   \\
 \cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}Sidechain                & POS                               & \cellcolor[HTML]{FF8F8C}24                & \cellcolor[HTML]{ADE694}$\sim$14\% of Supply    \\
 Solana                                      & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 272             & \cellcolor[HTML]{FF8F8C}$\sim$30\% of Supply    \\
-\cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FFDD99}1000               & \cellcolor[HTML]{FFDD99}$\sim$26\% of Supply    \\
+\cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FFDD99}1 000               & \cellcolor[HTML]{FFDD99}$\sim$26\% of Supply    \\
 Avalanche                                   & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 180             & \cellcolor[HTML]{ADE694}$\sim$9.3\% of Supply   \\
 \cellcolor[HTML]{EFEFEF}Fantom              & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FF8F8C}60                & \cellcolor[HTML]{FFDD99}$\sim$23\% of Supply    \\
 Cardano                                     & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}2 965             & \cellcolor[HTML]{ADE694}$\sim$9.94\% of Supply  \\
@@ -276,31 +278,32 @@ La blockchain di Solana è nata nel 2018. Lo scopo per cui è stata creata era q
 \subsubsection*{Scalabilità}
 Solana è ottimale per effettuare transazioni ed eseguire smart contract a costi molto bassi e in un breve periodo di tempo. La grandezza del blocco è ideale ed inoltre è in grado di eseguire un elevatissimo numero di transazioni e operazioni al secondo.
 \subsubsection*{Sicurezza \& Decentralizzazione}
-Solana utilizza un algoritmo di consenso di tipo PoS, più precisamente si tratta di una sorta di DPoS (Delegated PoS) dove, per ciascun blocco da aggiungere, tutti i nodi della rete eleggono un insieme di nodi detti "delegati" con incarico di raccogliere le transazioni e minare il blocco. Ogni nodo ha un potere nella votazione che è ponderato secondo la sua partecipazione fino a quel momento nella rete. Per poter sincronizzare ed evitare disaccordi sull'ordine delle transazioni, è stato introdotto il PoH precedentemente accennato: non si tratta di un protocollo di consenso, bensì di un sistema in grado di gestire perfettamente in ordine cronologico ogni transazione e dunque di evitare confusione tra i vari nodi e le varie transazioni. Per quanto riguarda la decentralizzazione sono presenti circa 1300 nodi nel network, non è assolutamente paragonabile al numero di nodi di Ethereum, ma si può ritenere un buon compromesso considerando l'ottima scalabilità.
+Solana utilizza un algoritmo di consenso di tipo PoS, più precisamente si tratta di una sorta di DPoS (Delegated PoS) dove, per ciascun blocco da aggiungere, tutti i nodi della rete eleggono un insieme di nodi detti "delegati" con incarico di raccogliere le transazioni e minare il blocco. Ogni nodo ha un potere nella votazione che è ponderato secondo la sua partecipazione fino a quel momento nella rete. Per poter sincronizzare ed evitare disaccordi sull'ordine delle transazioni, è stato introdotto il PoH precedentemente accennato: non si tratta di un protocollo di consenso, bensì di un sistema in grado di gestire perfettamente in ordine cronologico ogni transazione e dunque di evitare confusione tra i vari nodi e le varie transazioni. Per quanto riguarda la decentralizzazione sono presenti circa 1300 nodi nel network, numero accettabile data la giovinezza della rete ma non paragonabile al numero di nodi di Ethereum; inoltre, per diventare validatore sono necessari circa 700k\$ (al momento della scrittura), cifra che potrebbe bloccare la crescita del numero di validatori.
 \subsubsection*{Considerazioni finali}
-Solana è tra le migliori blockchain in circolazione e rispecchia quasi tutti i requisiti fondamentali per la realizzazione del progetto. Tuttavia oltre alla disomogenea distribuzione del token nativo tra i vari wallet, l'elemento che ha decretato l'esclusione dalle possibili scelte è stato il crollo della blockchain avvenuto il 14 settembre, durante il quale il network di Solana è rimasto offline per circa 16 ore in seguito ad un attacco denial-of-service. Nonostante Solana sia successivamente ritornata in funzione perfettamente, riteniamo grave l'accaduto soprattutto perchè il prodotto che deve essere realizzato non permette assolutamente di rimanere offline per periodi di tempo così lunghi.
+Solana è tra le migliori blockchain in circolazione e rispecchia quasi tutti i requisiti fondamentali per la realizzazione del progetto. Tuttavia oltre alla disomogenea distribuzione del token nativo tra i vari wallet, l'elemento che ha decretato l'esclusione dalle possibili scelte è stato il crollo della blockchain avvenuto il 14 settembre, durante il quale il network di Solana è rimasto offline per circa 16 ore in seguito ad un attacco denial-of-service. Nonostante Solana sia successivamente ritornata in funzione perfettamente, riteniamo grave l'accaduto soprattutto perchè il prodotto che deve essere realizzato non permette assolutamente di andare offline.
 \newpage
 \subsection*{Algorand\footnote{Sources: algoexplorer.io, metrics.algorand.org}}
-Algorand è stata fondata dal professore italiano Silvio Micali nel 2017. Inizialmente si poteva programmare sono in TEAL, un linguaggio complicato e limitante, ma più sicuro; al giorno d'oggi si sta ampliando è importando altri linguaggi oltre ad essere compatibile con EVM.
+Algorand è stata fondata dal professore italiano Silvio Micali nel 2017. Inizialmente si poteva programmare sono in TEAL, un linguaggio complicato e limitante, ma più sicuro; al giorno d'oggi si sta ampliando e sta importando altri linguaggi oltre ad essere divantata compatibile con la EVM.
 \subsubsection*{Scalabilità}
-Si tratta di una blockchain altamente scalabile, infatti è in grado di elaborare circa un migliaio di operazioni al secondo a costi inferiori al centesimo di dollaro. Per poter mantenere queste performance Algorand utilizza un'architettura a due layer nativi: L1 e L2, rispettivamente il primo dedicato a tutte quelle operazioni di base che risultano dunque meno onerose, mentre il secondo è dedicato a tutte quelle operazioni più elaborate, onerose ed a quelle elaborate off-chain che hanno bisogno di una conferma on-chain. La grandezza del blocco intorno al MB risulta un po' eccessiva e potrebbe causare di problemi in periodi di forte congestione della chain.
+Si tratta di una blockchain altamente scalabile, infatti è in grado di elaborare circa un migliaio di operazioni al secondo a costi inferiori al centesimo di dollaro. Per poter mantenere queste performance Algorand utilizza un'architettura a due layer nativi: L1 e L2, rispettivamente il primo dedicato a tutte quelle operazioni di base che risultano dunque meno onerose, mentre il secondo è dedicato a tutte quelle operazioni più elaborate, onerose ed a quelle elaborate off-chain che hanno bisogno di una conferma on-chain. La grandezza del blocco intorno al MB risulta eccessiva e potrebbe causare di problemi in periodi di forte congestione della chain.
 \subsubsection*{Sicurezza \& Decentralizzazione}
-Algorand utilizza un algoritmo di consenso che è una variante del classico PoS, infatti si tratta di un Pure PoS. A differenza del PoS normale qualsiasi detentore della valuta nativa ALGO è potenzialmente eleggibile per la validazione di un blocco, la scelta del validatore è randomica ponderata a seconda del numero di valuta in possesso. Questa scelta randomica rende sicura la chain poiché un potenziale utente malevolo non potrà sapere in maniera deterministica chi sarà il prossimo validatore del blocco.
+Algorand utilizza un algoritmo di consenso denominata "Pure PoS". Qualsiasi detentore della valuta nativa ALGO è potenzialmente eleggibile per la validazione di un blocco, la scelta del validatore è randomica e  ponderata a seconda del numero di valuta in possesso. Questa scelta randomica rende sicura la chain poiché un potenziale utente malevolo non potrà sapere in maniera deterministica chi sarà il prossimo validatore del blocco.
 Dal punto di vista della decentralizzazione si tratta di un network altamente decentralizzato proprio perchè i validatori sono i possessori di 1000 token determinati ogni volta che deve essere aggiunto un blocco alla chain, ma siccome la probabilità di essere eletti validatori è direttamente proporzionale al numero di token ALGO detenuti, la distribuzione del token risulta disomogenea, anche se non in maniera esagerata.
 \subsubsection*{Considerazioni finali}
 Algorand è un'ottima blockchain poiché riesce a combinare eccellenti attributi di scalabilità con una buona decentralizzazione. Le principali polemiche ricevute da Algorand riguardano la Tokenomics: infatti la gestione del token ALGO è molto particolare, infatti la supply totale deve ancora essere raggiunta e viene eseguita una politica di immissione di nuovi token qualora il suo valore dovesse salire velocemente (accellerated vesting), questa politica potrebbe disincentivare nuovi investitori poiché l'aumento del prezzo viene placato dall'immissione di nuova valuta.
 
 \newpage
 \subsection*{Avalanche\footnote{Sources: explorer.avax.network/validators, avascan.info, avascan.info/stats/richlist}}
-Avalanche è il primo network blockchain ad utilizzare l'omonimo protocollo di consenso ideato nel 2018. L'uscita di Avalanche è avvenuta nel 2020 ed ha riscosso subito grosso seguito, infatti questa blockchain risulta attualmente tra le più utilizzate oltre a poter  già vantare un' ampia e solida community.
+Avalanche è il primo network blockchain ad utilizzare l'omonimo protocollo di consenso ideato nel 2018. L'uscita di Avalanche è avvenuta nel 2020 ed ha riscosso subito un grande successo, infatti questa blockchain risulta attualmente tra le più utilizzate oltre a poter già vantare un'ampia e solida community.
 \subsubsection*{Scalabilità}
-Si tratta di una blockchain altamente scalabile: infatti è in grado di eseguire migliaia di transazioni al secondo a costi discreti, effettivamente se paragonata ad altri Layer-1 attualmente in circolazione, il costo di una transazione che si aggira intorno ai 30 centesimi può risultare lievemente più caro. La grandezza dei blocchi si aggira intorno al MB e potenzialmente può risultare un problema in periodi di forte congestione della blockchain. L'ottima scalabilità del network è permessa anche dalla suddivisione della blockchain in 3 sotto chain identificate dalle lettere X, C e P:  rispettivamente la prima utilizzata per la gestione dei vari asset, la seconda per la creazione e gestione di smart contract e infine la terza per il coordinamento tra i vari validatori.
+Si tratta di una blockchain altamente scalabile: è in grado infatti di eseguire migliaia di transazioni al secondo a costi discreti, che se effettivamente paragonati ad altri Layer-1 attualmente in circolazione possono risultare lievemente più cari. La grandezza dei blocchi si aggira intorno al MB e potenzialmente può risultare un problema in periodi di forte congestione della blockchain. L'ottima scalabilità del network è permessa anche dalla suddivisione della blockchain in 3 sotto chain identificate dalle lettere X, C e P:  rispettivamente la prima utilizzata per la gestione dei vari asset, la seconda per la creazione e gestione di smart contract e infine la terza per il coordinamento tra i vari validatori.
 
 \subsubsection*{Sicurezza \& Decentralizzazione}
 L'algoritmo di consenso Avalanche utilizzato è un PoS con delegazione, alla base di questo algoritmo c'è il continuo confronto tra i vari validatori per la validazione dei blocchi, inoltre viene utilizzato nel network un contatore di confidenza per accordare velocemente tutti i nodi e poter dunque concordare sull'esito e aggiungere il blocco.
-Si tratta di un network discretamente decentralizzato, infatti vanta di circa poco più di un migliaio di validatori. Non è facile diventare validatori poiché, nonostante non sia necessario un hardware eccessivamente espansivo, bisogna possedere circa duemila AVAX (token nativo della chain) che al prezzo attuale di mercato equivale circa a 200k\$. Infine non ci sono problemi per quanto riguarda la distribuzione tra i vari wallet del token nativo perché risulta sufficientemente equilibrata.
+Si tratta di un network discretamente decentralizzato, infatti vanta poco più di un migliaio di validatori. Non è facile diventare validatori poiché, nonostante non sia necessario un hardware eccessivamente costoso, bisogna possedere circa duemila AVAX (token nativo della chain) che al prezzo attuale di mercato equivalgono a circa 200k\$. Infine, non ci sono problemi per quanto riguarda la distribuzione tra i vari wallet del token nativo perché risulta sufficientemente equilibrata.
+Una nota di particolare preoccupazione riguarda la distribuzione geografica dei validatori di questa rete: più del 50\% dei validatori si trova in due soli stati (Germania e Stati Uniti).
 \subsubsection*{Considerazioni finali}
-Avalanche grazie al suo algoritmo di consenso, il quale è una variazione del classico PoS, permette di usufruire di una buona scalabilità a fronte di una discreta decentralizzazione. Si tratta di un network molto giovane, che ha riscosso parecchio successo proprio per essere riuscito a proporre soluzioni innovative e fino ad ora funzionanti, ma soprattutto che non andassero a sbilanciare troppo uno dei 3 aspetti cardine (scalabilità, sicurezza, decentralizzaione) di una blockchain trovando un buon compromesso tra di essi. 
+Avalanche grazie al suo algoritmo di consenso, il quale è una variazione del classico PoS, permette di usufruire di una buona scalabilità a fronte di una discreta decentralizzazione. Si tratta di un network molto giovane, che ha riscosso parecchio successo proprio per essere riuscito a proporre soluzioni innovative e fino ad ora funzionanti, ma soprattutto che non andassero a sbilanciare troppo uno dei 3 aspetti cardine (scalabilità, sicurezza, decentralizzaione) di una blockchain trovando un buon compromesso tra di essi.
 \newpage
 \subsection*{Fantom\footnote{Sources: docs.fantom.foundation, ftmscan.com/chart/blocktime, ftmscan.com/chart/blocksize}}
 La blockchain Fantom, uscita nel 2018 in testnet e successivamente rilasciata definitivamente nel Dicembre 2019, è un Layer-1 nato per fornire un'alternativa ad Ethereum.
@@ -309,11 +312,11 @@ La Fantom Foundation si è focalizzata nella realizzazione di una blockchain con
 La scalabilità è il punto forte di Fantom, infatti con un numero elevatissimo di TPS, costi di transazioni pressoché trascurabili e velocità quasi istantanea nei trasferimenti risulta in assoluto tra le blockchain più performanti in circolazione.
 \subsubsection*{Sicurezza \& Decentralizzazione}
 L' algoritmo di consenso utilizzato si chiama Lachesis, si tratta di un PoS con BTF (Byzantine Fault Tolerance) secondo il quale la blockchain rimane stabile e in funzione fin tanto che i $\frac{2}{3}$ dei validatori non è malevolo.
-Da un lato questo algoritmo potrebbe facilitare un'ipotetico attacco alla blockchain, tuttavia essendo complesso e oneroso diventare validatore risulta alla fine complesso e controproducente attaccare la blockchain.
+Da un lato questo algoritmo potrebbe facilitare un'ipotetico attacco alla blockchain, tuttavia essendo complesso e oneroso diventare validatore risulta alla fine molto costoso e controproducente attaccare la blockchain.
 Per poter diventare validatore sono necessari 1 milione di FTM (token nativo di Fantom), circa l’equivalente di 2 milioni di dollari.
-Pecca sotto l’aspetto della decentralizzazione poiché sono presenti solo 60 validatori momentaneamente (anche per le enormi risorse economiche richieste per diventare validatore) , di cui 10 appartenenti alla Fantom Foundation.
+Pecca sotto l’aspetto della decentralizzazione poiché sono presenti solo 60 validatori momentaneamente (anche per le enormi risorse economiche richieste per diventare validatore) di cui 10 appartenenti alla Fantom Foundation.
 \subsubsection*{Considerazioni finali}
-Nonostante sia una delle migliori blockchain sotto il punto di vista della scalabilità, non è stata scelta poiché riteniamo, al fine di garantire una lunga prospettiva di vita al progetto, che sia fondamentale utilizzare una blockchain maggiormente decentralizzata, dunque con un numero maggiore di validatori.
+Nonostante sia una delle migliori blockchain sotto il punto di vista della scalabilità, al fine di garantire una lunga prospettiva di vita al progetto riteniamo che sia fondamentale utilizzare una blockchain maggiormente decentralizzata (dunque con un numero maggiore di validatori).
 
 \newpage
 \subsection*{Cardano\footnote{Sources: adastat.net, explorer.cardano.org, ada.tokenview.com/en/topaccount}}
@@ -324,7 +327,8 @@ Per quanto riguarda la scalabilità, Cardano ha dei discreti costi e velocità n
 Cardano utilizza un algoritmo di consenso chiamato Ouroborus, si tratta di un PoS. Questo algoritmo si basa sul concetto di honest majority secondo il quale il nodo o l'insieme di nodi di maggioranza, dunque che possiede la maggiorparte dei token nativi, sia un nodo onesto poiché non è nei suoi interessi far crollare il valore della valuta. In Ouroborus il tempo viene suddiviso in epoche (intervalli temporali) e slot (incrementi di 20 secondi in un'epoca), ogni slot viene estratto un blocco e scelto il leader dello slot.
 Per quanto riguarda la decentralizzazione, il network di Cardano è composto da circa 3mila nodi validatori, un buon numero che permettere di poter considerare questa blockchain sufficientemente decentralizzata.
 \subsubsection*{Considerazioni finali}
-Cardano viene chiamata blockchain di "terza generazione" perchè ha permesso parzialmente di risolvere il famoso trilemma delle blockchain portando innovazione e aumentando consistentemente la scalabilità  , il tutto riuscendo a mantenere un buon livello di decentralizzazione, anche se non paragonabile a quello di Ethereum. Tuttavia questa blockchain è stata esclusa dalle scelte poichè, nonostante rispetto ad altre blockchain esista già da diversi anni, non ha reso disponibile lo sviluppo di smart contract se non solo recentemente e per lo sviluppo di questo progetto è stato ritenuto rischioso approciarsi ad un Layer-1 troppo giovane sotto l'aspetto degli smart contract.
+Cardano viene chiamata blockchain di "terza generazione" perchè ha permesso parzialmente di risolvere il famoso trilemma delle blockchain portando innovazione e aumentando consistentemente la scalabilità, il tutto riuscendo a mantenere un buon livello di decentralizzazione (anche se non paragonabile a quello di Ethereum). Tuttavia, rispetto ad altre blockchain di terza generazione, non ha reso disponibile lo sviluppo di smart contract se non solo recentemente e per lo sviluppo di questo progetto è stato ritenuto rischioso approciarsi ad un Layer-1 troppo giovane sotto l'aspetto degli smart contract.
+Inoltre, alcuni problemi di implementazione delle transazioni hanno fatto si che attualmente siano molto pochi i contratti digitali presenti su Cardano.
 
 
 \newpage
@@ -333,12 +337,12 @@ La blockchain di Harmony è stata fondata nel 2018 e condivisa nel 2019. Il fond
 \subsubsection*{Scalabilità}
 Indubbiamente Harmony è tra le blockchain più scalabili in assoluto, infatti esegue un numero elevatissimo di TPS ad un costo quasi nullo. L'unica pecca sta nell'elevata grandezza dei blocchi che potrebbe causare ritardi nei tempi di trasmissione tra validatori nel network. Questi ottimi attributi di scalabilità sono permessi dalla suddivisione della blockchain in 4 shard, i quali rendono possibile la suddivisione del carico computazionale richiesto ai validatori così da poter eseguire in parallelo e dunque più velocemente uno smart contract.
 \subsubsection*{Sicurezza \& Decentralizzazione}
-Harmony è la prima blockchain a introdurre lo sharding con un algoritmo di consenso di tipo PoS. Più nello specifico si tratta di ePoS (Effective Proof Of Stake) nel quale ogni 21 ore i validatori vengono suddivisi e successivamente assegnati in maniera randomica ad uno shard. La divisione randomica permette di evitare il cosiddetto front-running, infatti eventuali validatori malevoli non possono sapere la prossima assegnazione e dunque non sarà possibile organizzarsi per manipolare la blockchain a loro favore.
+Harmony è stata la prima blockchain a introdurre lo sharding con un algoritmo di consenso di tipo PoS. Più nello specifico si tratta di ePoS (Effective Proof Of Stake) nel quale ogni 21 ore i validatori vengono suddivisi e successivamente assegnati in maniera randomica ad uno shard. La divisione randomica permette di evitare il cosiddetto front-running, infatti eventuali validatori malevoli non possono sapere la prossima assegnazione e dunque non sarà possibile organizzarsi per manipolare la blockchain a loro favore.
 Possono esserci fino a 250 validatori per shard, quindi un massimo di 1000 validatori (al momento ci sono 280 validatori).
 Vengono inoltre continuamente monitorati i validatori per individuare e penalizzare (slashing) tutti quelli che non rispettano il protocollo o che vanno offline.
 Per diventare validatore al momento sono necessari 10.000 ONE più uno specifico hardware. Al prezzo attuale di mercato si tratta di circa 2000/3000\$.
 \subsubsection*{Considerazioni finali}
-Nonostante dal punto di vista della scalabilità si tratta di una ottima blockchain per la realizzazione del progetto, è stata esclusa poiché, come per Fantom, la decentralizzazione non è ottimale e buona parte dei validatori di Harmony viene controllata dal team. In più la distribuzione del token nativo tra i vari wallet è esageratamente disomogenea, infatti i primi 100 wallet più ricchi possiedono circa il 40\% della supply circolante.
+Nonostante dal punto di vista della scalabilità si tratti di un'ottima blockchain per la realizzazione del progetto, è stata esclusa poiché, come per Fantom, la decentralizzazione non è ottimale e buona parte dei validatori di Harmony viene controllata dal team. In più la distribuzione del token nativo tra i vari wallet è esageratamente disomogenea, infatti i primi 100 wallet più ricchi possiedono circa il 40\% della supply circolante.
 
 \newpage
 \subsection*{Conclusioni}
@@ -368,7 +372,4 @@ Nonostante dal punto di vista della scalabilità si tratta di una ottima blockch
 
 \end{itemize}
 
-\newpage
-
-\section{Analisi seconda tecnologia}
 \end{document}
